# xiamocon

./: .gitignore  API.ja.md  README.md
cpp/: CMakeLists.txt  Doxyfile
cpp/example/atoms3_cube_demo/: extra_scripts.py  platformio.ini
cpp/example/atoms3_cube_demo/include/: mpu6886.hpp
cpp/example/atoms3_cube_demo/src/: app.cpp
cpp/example/atoms3_demo/: extra_scripts.py  platformio.ini
cpp/example/atoms3_demo/src/: app.cpp
cpp/example/breakout/: Makefile
cpp/example/breakout/src/: app.cpp
cpp/example/hwtest/: CMakeLists.txt  Makefile
cpp/example/hwtest/src/: app.cpp
cpp/example/imu_demo/include/: bmp_earth.hpp  lsm6dsv16x.hpp  r_gray1.hpp
cpp/example/imu_demo/src/: app.cpp
cpp/example/ocarina/src/: app.cpp
cpp/platform/common/include/xmc/: app.h  xmc_common.h
cpp/platform/decl/include/xmc/: app.h  app_entry.h  app_entry.hpp  audio_common.h  audio_common.hpp  xmc_common.h  xmc_common.hpp  xmc_status.h
cpp/platform/impl/atoms3_pio_arduino/src/: battery.cpp  display.cpp  gpio.cpp  i2c.cpp  ioex.cpp  main.cpp  pins.cpp  power.cpp  pwm.cpp  ram.cpp  semaphore.cpp  spi.cpp  spinlock.cpp  streaming_dac.cpp  timer.cpp  xmc_common.cpp  xmc_status.c
cpp/platform/impl/rp2350_pico_sdk/src/: app.c  dma_irq.c  dma_irq.cpp  gpio.c  gpio.cpp  i2c.c  i2c.cpp  lock.c  lock.cpp  main.c  main.cpp  pins.cpp  power.c  power.cpp  pwm.c  pwm.cpp  ram.c  ram.cpp  sdac.c  sdac.cpp  smaphore.cpp  spi.c  spi.cpp  spinlock.cpp  streaming_dac.cpp  timer.c  timer.cpp  xmc_common.c  xmc_common.cpp
cpp/platform/rp2350_pico_sdk/src/: gpio.c  lock.c  spi.c  timer.c
(+33 files in other folders)
